[gd_scene load_steps=2 format=3 uid="uid://txph41g5lwct"]

[ext_resource type="Script" uid="uid://dcr1qfkfnndqs" path="res://Assets/Scripts/level_complete_menu.gd" id="1_aqq7l"]

[node name="LevelCompleteMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_aqq7l")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.588235)

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Level Complete"

[node name="NextLevelButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Next Level"

[node name="MainMenuButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Main Menu
"

[connection signal="pressed" from="CenterContainer/VBoxContainer/NextLevelButton" to="." method="_on_next_level_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
